modified instruction page

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,11 @@
   width: 90vw;
   background-color: #3b3b3b;
 }
+
+
+.lineTwo {
+  height: .1rem;
+  width: 90vw;
+  background-color: #3b3b3b;
+  margin-bottom: .5rem;
+}
